8001219: Clean up use of URLs in javadoc Extern class
Reviewed-by: darcy